# DailyNewsSpider

./: .gitignore  LICENSE  README.md  bing.py  ctolib.py  down.py  insert_new_item_template.py  ithome.py  logme.ini  main.py  paper.py  pyproject.toml  sync_data2mongo.py  tuicool.py
HotNewsTemplate/: 36krNewsTemplate.js  36krNewsTemplate.json  3DMGameTemplate.json  3DMGameTemplate.yaml  Acg178NewsTemplate.json  AcgmhNewsTemplate.json  BangumiTemplate.js  BingWallpaperTemplate.json  Btc126Template.json  CTOLibNewsTemplate.js  CnblogsNewsTemplate.js  CsdnNewsTemplate.js  DingkejiNewsTemplate.js  DmzjNewsTemplate.json  FreebufNewsTemplate.js  GamerSkyAcgTemplate.json  GeekparkNewsTemplate.js  HackerNewsTemplate.json  Huoxing24Template.js  HupuNewsTemplate.json  HuxiuNewsTemplate.json  IThomeTemplate.json  InvestorscnTemplate.json  JinseTemplate.js  JiqizhixinNewsTemplate.js  LeiphoneNewsTemplate.js  MLcommonsTeamplate.json  MedPeerNewsTeamplate.json  OSchinaTemplate.json  PapersWithCodeTemplate.json  ProductHuntTemplate.js  QidianNovelTemplate.json  SegmentfaultNewsTemplate.json  ShejipiNewsTemplate.js  SinaFinanceTemplate.json  SinaNewsTemplate.json  SncratingNewsTemplate.js  SwarmaPatternTemplate.json  TechSinaNewsTemplate.js  TechSinaNewsTemplate.json  (+15 more)
config/: .env.dev  __init__.py  constant.py
core/: __init__.py  download.py  engine.py  middleware.py  pipeline.py  queue.py  spider.py  template.py
core/component/: __init__.py  consumer.py  extractor.py  producer.py
core/http/: __init__.py  aiorequests.py  http_process.py  http_request.py  http_result.py
core/task/: __init__.py  download_task.py  process_task.py
spiders/: __init__.py  new_tencent_spider.py
utils/: __init__.py  bloom_filter.py  color.py  db_util.py  decorator.py  es_utils.py  format_utils.py  proxy_utls.py  sync_to_es.py  user_agents.py
utils/headless_server/: chrome_input.js  chrome_server.js  log4js-util.js  package-lock.json  package.json  puppeteer_object.js  redis_util.js
