[tool.poetry]
name = "Liz2Bird"
version = "0.1.0"
description = ""
authors = ["EmptyChan <chen19941018@live.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = "^3.7"
grequests = "*"
chardet = "*"
logme = "*"
pymongo = "*"
redis = "*"
mmh3 = "*"
colorama = "*"
wrapt = "1.11.1"
apscheduler = "*"
pymysql = "*"
aiomysql = "*"
retrying = "*"
elasticsearch = "*"
lxml = "*"
python-dateutil = "*"
envparse = "*"
html5lib = "*"
bs4 = "*"
cchardet = "*"
httpx = "^0.13.3"
uvloop = "^0.14.0"
PyYaml = "^5.3.1"
certifi = "^2020.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
