[tool.poetry]
name = "DailyNewsSpider"
version = "0.1.0"
description = ""
authors = ["EmptyChan <chen19941018@live.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.poetry.dependencies]
python = "^3.11"
grequests = "*"
chardet = "*"
logme = "*"
pymongo = "*"
redis = "*"
mmh3 = "*"
colorama = "*"
wrapt = "*"
apscheduler = "*"
pymysql = "*"
aiomysql = "*"
retrying = "*"
elasticsearch = "*"
lxml = "*"
python-dateutil = "*"
envparse = "*"
html5lib = "*"
bs4 = "*"
xattr="^1.1.0"
faust-cchardet = "*"
httpx = {extras = ["socks"], version = "^0.25.0"}
uvloop = "*"
PyYaml = "*"
certifi = "*"
htmldate = "^1.1.1"
cython = "^0.29.34"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
